--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
     <h2>Rastlina</h2>
 
     <!-- DÔLEŽITÉ: value = kľúč z Firebase /tower/plants/<key> -->
-    <select id="plantSelect">
+<select id="plantSelect">
   <option value="">🌱 Vyber rastlinu</option>
-  <option value="lettuce">🥬 Hlávkový šalát</option>
+  <option value="salad">🥬 Hlávkový šalát</option>
   <option value="tomato">🍅 Rajčiaky cherry</option>
+  <option value="cucumber">🥒 Uhorka</option>
   <option value="pepper">🌶 Paprika mini</option>
-  <option value="radish">🥕 Reďkovka</option>
   <option value="spinach">🌿 Špenát</option>
   <option value="basil">🌿 Bazalka</option>
   <option value="mint">🌱 Mäta</option>
   <option value="arugula">🥗 Rukola</option>
   <option value="coriander">🌿 Koriander</option>
-  <option value="chives">🧅 Pažítka</option>
-</select>
+  <option value="strawberry">🍓 Jahody</option>
+</select>>
 
     <button onclick="sendPlant()"><i class="fas fa-seedling"></i> Odoslať rastlinu</button>
   </section>
@@ -182,6 +182,7 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
