--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
       <i class="fas fa-tint"></i> Vlhkosť: <span id="humidity">--</span>
     </div>
   </section>
+  <div class="status-item status-temp">
+<i class="fas fa-thermometer-half"></i> Teplota vody: <span id="waterTemp">--</span>
+    </div>
 </div>
 
 <!-- Firebase SDK pre web -->
@@ -182,6 +185,7 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
