Add water temperature status to dashboard
Added water temperature status to the HydroVeže section.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
     <div class="status-item status-light"><i class="fas fa-lightbulb"></i> Svetlo: <span id="lightStatus">--</span></div>
     <div class="status-item status-temp"><i class="fas fa-thermometer-half"></i> Teplota: <span id="temperature">--</span></div>
     <div class="status-item status-humidity"><i class="fas fa-tint"></i> Vlhkosť: <span id="humidity">--</span></div>
-  </section>
+    <div class="status-item status-temp"><i class="fas fa-temperature-high"></i> Teplota vody: <span id="waterTemp">--</span></div>
+
+</section>
 </div>
 
 <!-- Firebase SDK pre web -->
@@ -164,3 +166,4 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
