--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HydroSmart Dashboard</title>
 <style>
-  /* --- TVOJ DIZAJN --- */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(to right, #e0f7fa, #d0f0c0);
@@ -13,7 +12,6 @@
     margin: 0;
     padding: 0;
   }
-
   .container {
     max-width: 650px;
     margin: 30px auto;
@@ -22,88 +20,49 @@
     padding: 30px;
     box-shadow: 0 8px 25px rgba(0,0,0,0.25);
   }
-
-  header {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-
-  header h1 {
-    color: #2e7d32;
-    font-size: 2.5em;
-    margin-bottom: 5px;
-  }
-
-  header p {
-    color: #555;
-    font-size: 1.2em;
-  }
-
-  section {
-    margin-bottom: 30px;
-  }
-
+  header { text-align: center; margin-bottom: 30px; }
+  header h1 { color: #2e7d32; font-size: 2.5em; margin-bottom: 5px; }
+  header p { color: #555; font-size: 1.2em; }
+  section { margin-bottom: 30px; }
   h2 {
-    color: #2e7d32;
-    margin-bottom: 15px;
-    border-bottom: 3px solid #2e7d32;
-    padding-bottom: 5px;
-    font-size: 1.5em;
+    color: #2e7d32; margin-bottom: 15px; border-bottom: 3px solid #2e7d32;
+    padding-bottom: 5px; font-size: 1.5em;
   }
-
   select, button {
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 15px;
-    border-radius: 15px;
-    border: 1px solid #ccc;
-    font-size: 18px;
+    width: 100%; padding: 15px; margin-bottom: 15px;
+    border-radius: 15px; border: 1px solid #ccc; font-size: 18px;
   }
-
   button {
-    background-color: #2e7d32;
-    color: white;
-    border: none;
-    cursor: pointer;
+    background-color: #2e7d32; color: white; border: none; cursor: pointer;
     transition: background 0.3s ease;
   }
-
-  button:hover {
-    background-color: #1b5e20;
-  }
-
+  button:hover { background-color: #1b5e20; }
   .status-section {
-    background-color: #f1f8e9;
-    padding: 25px;
-    border-radius: 20px;
+    background-color: #f1f8e9; padding: 25px; border-radius: 20px;
     box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
   }
-
   .status-item {
-    font-size: 20px;
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 12px 15px;
-    border-radius: 15px;
-    transition: all 0.3s ease;
+    font-size: 20px; margin-bottom: 15px; display: flex;
+    align-items: center; justify-content: space-between;
+    padding: 12px 15px; border-radius: 15px; transition: all 0.3s ease;
   }
-
-  .status-item span {
-    font-weight: bold;
-  }
-
+  .status-item span { font-weight: bold; }
   .status-pump { background-color: #c8e6c9; color: #2e7d32; }
   .status-water { background-color: #b3e5fc; color: #0277bd; }
   .status-nutrients { background-color: #dcedc8; color: #558b2f; }
   .status-light { background-color: #fff9c4; color: #fbc02d; }
   .status-temp { background-color: #ffe0b2; color: #ef6c00; }
   .status-humidity { background-color: #f0f4c3; color: #827717; }
+  .status-waterTemp { background-color: #e1f5fe; color: #01579b; }
+  .status-cal { background-color: #ede7f6; color: #4527a0; }
 
-  .status-item i {
-    margin-right: 15px;
-    font-size: 1.5em;
+  .status-item i { margin-right: 15px; font-size: 1.5em; }
+
+  .hint {
+    background: #ffffffcc;
+    border-radius: 16px;
+    padding: 16px;
+    box-shadow: inset 0 0 8px rgba(0,0,0,0.05);
   }
 
   @media(max-width: 500px){
@@ -126,22 +85,17 @@
     <h2>Rastlina</h2>
     <select id="plantSelect">
       <option value="">🌱 Vyber rastlinu</option>
-
-      <!-- VALUE = presný kľúč vo Firebase + presný key, ktorý očakáva ESP32 -->
       <option value="salad">🥬 Hlávkový šalát</option>
-      <option value="tomato">🍅 Rajčiaky cherry</option>
-      <option value="cucumber">🥒 Uhorka</option>
-      <option value="pepper">🌶 Paprika mini</option>
-      <option value="radish">🥕 Reďkovka</option>
-      <option value="spinach">🌿 Špenát</option>
-      <option value="basil">🌿 Bazalka</option>
-      <option value="mint">🌱 Mäta</option>
       <option value="arugula">🥗 Rukola</option>
-      <option value="coriander">🌿 Koriander</option>
-      <option value="strawberry">🍓 Jahody</option>
+      <option value="basil">🌿 Bazalka</option>
+      <option value="spinach">🌿 Špenát</option>
       <option value="chives">🧅 Pažítka</option>
+      <option value="coriander">🌿 Koriander</option>
+      <option value="mint">🌱 Mäta</option>
+      <option value="leafsalad">🥬 Listový šalát</option>
+      <option value="parsley">🌿 Petržlen vňaťový</option>
+      <option value="pakchoi">🥬 Pak choi</option>
     </select>
-
     <button onclick="sendPlant()"><i class="fas fa-seedling"></i> Odoslať rastlinu</button>
   </section>
 
@@ -151,19 +105,30 @@
     <div class="status-item status-water"><i class="fas fa-water"></i> Hladina vody: <span id="waterLevel">--</span></div>
     <div class="status-item status-nutrients"><i class="fas fa-vial"></i> Živiny: <span id="nutrients">--</span></div>
     <div class="status-item status-light"><i class="fas fa-lightbulb"></i> Svetlo: <span id="lightStatus">--</span></div>
-    <div class="status-item status-temp"><i class="fas fa-thermometer-half"></i> Teplota: <span id="temperature">--</span></div>
+    <div class="status-item status-temp"><i class="fas fa-thermometer-half"></i> Teplota vzduchu: <span id="temperature">--</span></div>
+    <div class="status-item status-waterTemp"><i class="fas fa-thermometer-half"></i> Teplota vody: <span id="waterTemp">--</span></div>
     <div class="status-item status-humidity"><i class="fas fa-tint"></i> Vlhkosť: <span id="humidity">--</span></div>
-    <div class="status-item status-temp"><i class="fas fa-temperature-high"></i> Teplota vody: <span id="waterTemp">--</span></div>
+    <div class="status-item status-cal"><i class="fas fa-check-circle"></i> Kalibrácia vody: <span id="calStatus">--</span></div>
+  </section>
 
-</section>
+  <section class="hint">
+    <h2>Odporúčania živín</h2>
+    <div style="margin-bottom:10px;">
+      <b>Aktuálna koncentrácia (ppm):</b> <span id="concPpm">--</span>
+      <br>
+      <b>Cieľ (ppm):</b> <span id="targetPpm">--</span>
+    </div>
+    <div id="nutrientHint">--</div>
+    <div style="margin-top:10px; font-size:0.95em; color:#555;">
+      Poznámka: ppm je <b>po odrátaní baseline</b> (čistá voda).
+    </div>
+  </section>
 </div>
 
 <!-- Firebase SDK pre web -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-<!-- Tvoj JS -->
 <script src="./app.js"></script>
 </body>
 </html>
-
