--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HydroSmart Dashboard</title>
+
 <style>
   /* --- TVOJ DIZAJN --- */
   body {
@@ -92,6 +93,7 @@
 
   .status-item span {
     font-weight: bold;
+    margin-left: 12px;
   }
 
   .status-pump { background-color: #c8e6c9; color: #2e7d32; }
@@ -103,7 +105,15 @@
 
   .status-item i {
     margin-right: 15px;
-    font-size: 1.5em;
+    font-size: 1.3em;
+    min-width: 24px;
+  }
+
+  .subhead {
+    margin: 15px 0 10px;
+    color: #2e7d32;
+    font-size: 1.1em;
+    font-weight: 700;
   }
 
   @media(max-width: 500px){
@@ -115,6 +125,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
+
 <body>
 <div class="container">
   <header>
@@ -122,57 +133,63 @@
     <p>Vyber rastlinu a sleduj stav hydroponickej veže</p>
   </header>
 
- <section class="status-section">
-  <h2>Status HydroVeže</h2>
+  <!-- ================== Rastlina ================== -->
+  <section>
+    <h2>Rastlina</h2>
+    <select id="plantSelect">
+      <option value="">🌱 Vyber rastlinu</option>
+      <option value="salad">🥬 Hlávkový šalát</option>
+      <option value="arugula">🥗 Rukola</option>
+      <option value="basil">🌿 Bazalka</option>
+      <option value="spinach">🌿 Špenát</option>
+      <option value="chives">🧅 Pažítka</option>
+      <option value="coriander">🌿 Koriander</option>
+      <option value="mint">🌱 Mäta</option>
+      <option value="leafLettuce">🥬 Listový šalát (dubáčik / lollo)</option>
+      <option value="parsley">🌿 Petržlen vňaťový</option>
+      <option value="pakchoi">🥬 Pak choi (baby)</option>
+    </select>
+    <button onclick="sendPlant()"><i class="fas fa-seedling"></i> Odoslať rastlinu</button>
+  </section>
 
-  <h3 style="margin:15px 0 10px;color:#2e7d32;">💧 Voda</h3>
-  <div class="status-item status-water"><i class="fas fa-water"></i> Hladina: <span id="waterLevel">--</span></div>
-  <div class="status-item status-temp"><i class="fas fa-temperature-low"></i> Teplota vody: <span id="waterTemp">--</span></div>
-  <div class="status-item status-water"><i class="fas fa-check"></i> Kalibrácia: <span id="calibrationStatus">--</span></div>
-
-  <h3 style="margin:15px 0 10px;color:#2e7d32;">🧪 Živiny</h3>
-  <div class="status-item status-nutrients"><i class="fas fa-vial"></i> Živiny: <span id="nutrientsPct">-- %</span></div>
-  <div class="status-item status-water"><i class="fas fa-bullseye"></i> Cieľ: <span id="nutrientsTargetPct">--</span></div>
-  <div class="status-item status-water"><i class="fas fa-flask"></i> Dávkovanie: <span id="dosingText">--</span></div>
-  <div class="status-item status-water"><i class="fas fa-info-circle"></i> Odporúčanie: <span id="nutrientHint">--</span></div>
-
-  <h3 style="margin:15px 0 10px;color:#2e7d32;">💡 Svetlo</h3>
-  <div class="status-item status-light"><i class="fas fa-lightbulb"></i> Svetlo: <span id="lightStatus">--</span></div>
-  <div class="status-item status-light"><i class="fas fa-clock"></i> Režim: <span id="lightHours">--</span></div>
-
-  <h3 style="margin:15px 0 10px;color:#2e7d32;">🌡️ Vzduch</h3>
-  <div class="status-item status-temp"><i class="fas fa-thermometer-half"></i> Teplota vzduchu: <span id="temperature">--</span></div>
-  <div class="status-item status-humidity"><i class="fas fa-tint"></i> Vlhkosť: <span id="humidity">--</span></div>
-
-  <h3 style="margin:15px 0 10px;color:#2e7d32;">⚙️ Systém</h3>
-  <div class="status-item status-pump"><i class="fas fa-tint"></i> Pumpa: <span id="pumpStatus">--</span></div>
-  <div class="status-item status-water"><i class="fas fa-seedling"></i> Rastlina: <span id="plantName">--</span></div>
-  <div class="status-item status-water"><i class="fas fa-layer-group"></i> Fáza: <span id="phaseName">--</span></div>
-</section>
-
-
+  <!-- ================== Fáza ================== -->
   <section>
     <h2>Fáza</h2>
     <select id="phaseSelect">
+      <option value="">🧩 Vyber fázu</option>
       <option value="seedling">🌱 Po vyklíčení (zakoreňovač)</option>
       <option value="growth">🌿 Rast (hnojivo A + B)</option>
     </select>
-    <button onclick="sendPhase()"><i class="fas fa-sliders"></i> Nastaviť fázu</button>
+    <button onclick="sendPhase()"><i class="fas fa-layer-group"></i> Odoslať fázu</button>
   </section>
 
+  <!-- ================== Status ================== -->
   <section class="status-section">
     <h2>Status HydroVeže</h2>
-    <div class="status-item status-pump"><i class="fas fa-tint"></i> Pumpa: <span id="pumpStatus">--</span></div>
-    <div class="status-item status-water"><i class="fas fa-water"></i> Hladina vody: <span id="waterLevel">--</span></div>
 
-    <div class="status-item status-nutrients"><i class="fas fa-vial"></i> Živiny: <span id="nutrientsPct">-- %</span></div>
-    <div class="status-item status-water"><i class="fas fa-info-circle"></i> Odporúčanie: <span id="nutrientHint">--</span></div>
+    <div class="subhead">💧 Voda</div>
+    <div class="status-item status-water"><i class="fas fa-water"></i> Hladina: <span id="waterLevel">--</span></div>
+    <div class="status-item status-temp"><i class="fas fa-temperature-low"></i> Teplota vody: <span id="waterTemp">--</span></div>
     <div class="status-item status-water"><i class="fas fa-check"></i> Kalibrácia: <span id="calibrationStatus">--</span></div>
 
+    <div class="subhead">🧪 Živiny</div>
+    <div class="status-item status-nutrients"><i class="fas fa-vial"></i> Živiny: <span id="nutrientsPct">-- %</span></div>
+    <div class="status-item status-water"><i class="fas fa-bullseye"></i> Cieľ: <span id="nutrientsTargetPct">--</span></div>
+    <div class="status-item status-water"><i class="fas fa-flask"></i> Dávkovanie: <span id="dosingText">--</span></div>
+    <div class="status-item status-water"><i class="fas fa-info-circle"></i> Odporúčanie: <span id="nutrientHint">--</span></div>
+
+    <div class="subhead">💡 Svetlo</div>
     <div class="status-item status-light"><i class="fas fa-lightbulb"></i> Svetlo: <span id="lightStatus">--</span></div>
+    <div class="status-item status-light"><i class="fas fa-clock"></i> Režim: <span id="lightHours">--</span></div>
+
+    <div class="subhead">🌡️ Vzduch</div>
     <div class="status-item status-temp"><i class="fas fa-thermometer-half"></i> Teplota vzduchu: <span id="temperature">--</span></div>
-    <div class="status-item status-temp"><i class="fas fa-temperature-low"></i> Teplota vody: <span id="waterTemp">--</span></div>
     <div class="status-item status-humidity"><i class="fas fa-tint"></i> Vlhkosť: <span id="humidity">--</span></div>
+
+    <div class="subhead">⚙️ Systém</div>
+    <div class="status-item status-pump"><i class="fas fa-tint"></i> Pumpa: <span id="pumpStatus">--</span></div>
+    <div class="status-item status-water"><i class="fas fa-seedling"></i> Rastlina: <span id="plantName">--</span></div>
+    <div class="status-item status-water"><i class="fas fa-layer-group"></i> Fáza: <span id="phaseName">--</span></div>
   </section>
 </div>
 
@@ -180,8 +197,11 @@
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
+<!-- Dôležité: auth len ak ho používaš v app.js
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+-->
+
 <!-- Tvoj JS -->
 <script src="./app.js"></script>
 </body>
 </html>
-
